--- a/package.json
+++ b/package.json
@@ -5,16 +5,18 @@
   "description": "NodeJS REST API",
   "license": "ISC",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "dev": "nodemon src/app.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.19.0",
     "class-sanitizer": "^1.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "~1.4.4",
-    "crypto-js": "^4.1.1",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "debug": "~2.6.9",
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
@@ -26,10 +28,10 @@
     "md5": "^2.3.0",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
+    "nodemon": "^3.1.7",
     "path": "^0.12.7",
     "rotating-file-stream": "^3.0.3",
     "sqlstring": "^2.3.3",
     "uuid": "^8.3.2"
   }
 }
-
