--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "debug": "~2.6.9",
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
-    "express-fileupload": "^1.3.1",
+    "express-fileupload": "^1.5.1",
     "http-errors": "~1.6.3",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "md5": "^2.3.0",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nodemon": "^3.1.7",
     "path": "^0.12.7",
