--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
     "path": "^0.12.7",
     "rotating-file-stream": "^3.0.3",
