--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
     "path": "^0.12.7",
+    "qrcode": "^1.5.4",
     "rotating-file-stream": "^3.0.3",
     "sqlstring": "^2.3.3",
     "uuid": "^8.3.2"
